--- a/RMS.App/Views/GatePass/CheckIn.cshtml
+++ b/RMS.App/Views/GatePass/CheckIn.cshtml
@@ -81,7 +81,6 @@
             </div>
         </div>
 
-
         <div class="form-group row" hidden="hideen">
             @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
@@ -90,19 +89,15 @@
             </div>
         </div>
 
-
         <div class="form-group row">
             <div class="col-md-2"></div>
             <div class="col-md-5">
                 <input type="submit" value="CheckIn" class="btn btn-warning" /> &nbsp;
-                @Html.ActionLink("Back to List", "Requests", null, new { @class = "btn btn-info" })
+                @Html.ActionLink("Back to List", "Index","AssignRequisitions", null, new { @class = "btn btn-info" })
             </div>
         </div>
     </div>
 }
-
-
-
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
