--- a/RMS.App/Views/AssignRequisitions/Details.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Details.cshtml
@@ -11,9 +11,9 @@
     <div class="row">
         <div class="col-md-6">
             <br/>
-            <h4>Assigned Requisition Info :</h4>
+            <h4>Requestor Info :</h4>
             <br/>
-            <table class="table table-light table-active table-primary dt-responsive nowrap">
+            <table class="table table-bordered">
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.RequisitionNumber)</td>
                     <td>@Html.DisplayFor(model => model.RequisitionNumber)</td>
@@ -22,7 +22,7 @@
                 @if (Model.Requisition.RequestFor == "Own")
                 {
                     <tr>
-                        <td>@Html.DisplayName("Requestor Full Name")</td>
+                        <td>@Html.DisplayName("Requestor Name")</td>
                         <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
                     </tr>
                 }
@@ -60,15 +60,7 @@
             <br />
             <h4>Journey Info :</h4>
             <br />
-            <table class="table table-light table-active table-primary dt-responsive nowrap">
-                <tr>
-                    <td style="width: 35%">@Html.DisplayNameFor(model => model.Requisition.StartDateTime)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.StartDateTime)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.EndDateTime)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.EndDateTime)</td>
-                </tr>
+            <table class="table table-bordered">
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Requisition.FromPlace)</td>
                     <td>@Html.DisplayFor(model => model.Requisition.FromPlace)</td>
@@ -77,6 +69,15 @@
                     <td>@Html.DisplayNameFor(model => model.Requisition.DestinationPlace)</td>
                     <td>@Html.DisplayFor(model => model.Requisition.DestinationPlace)</td>
                 </tr>
+                <tr>
+                    <td style="width: 35%">@Html.DisplayNameFor(model => model.Requisition.StartDateTime)</td>
+                    <td>@Model.Requisition.StartDateTime.ToString("dd MMM yyyy hh:mm tt")</td>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Requisition.EndDateTime)</td>
+                    <td>@Model.Requisition.EndDateTime.ToString("dd MMM yyyy hh:mm tt")</td>
+                </tr>
+                
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Requisition.PassengerQty)</td>
                     <td>@Html.DisplayFor(model => model.Requisition.PassengerQty)</td>
@@ -99,7 +100,11 @@
             <br />
             <h4>Vehicle Info :</h4>
             <br />
-            <table class="table table-light table-active table-primary dt-responsive nowrap">
+            <table class="table table-bordered">
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Vehicle.VehicleType.Name)</td>
+                    <td>@Html.DisplayFor(model => model.Vehicle.VehicleType.Name)</td>
+                </tr>
                 <tr>
                     <td style="width: 35%">@Html.DisplayNameFor(model => model.Vehicle.BrandName)</td>
                     <td>@Html.DisplayFor(model => model.Vehicle.BrandName)</td>
@@ -109,17 +114,10 @@
                     <td>@Html.DisplayFor(model => model.Vehicle.RegNo)</td>
                 </tr>
                 <tr>
-                    <td>@Html.DisplayNameFor(model => model.Vehicle.ModelName)</td>
-                    <td>@Html.DisplayFor(model => model.Vehicle.ModelName)</td>
-                </tr>
-                <tr>
                     <td>@Html.DisplayNameFor(model => model.Vehicle.SeatCapacity)</td>
                     <td>@Html.DisplayFor(model => model.Vehicle.SeatCapacity)</td>
                 </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Vehicle.VehicleType.Name)</td>
-                    <td>@Html.DisplayFor(model => model.Vehicle.VehicleType.Name)</td>
-                </tr>
+
 
             </table>
         </div>
@@ -128,19 +126,20 @@
             <br />
             <h4>Driver Info :</h4>
             <br />
-            <table class="table table-danger table-active table-primary dt-responsive nowrap">
+            <table class="table table-bordered">
                 <tr>
                     <td style="width: 35%">@Html.DisplayNameFor(model => model.Employee.FullName)</td>
                     <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
                 </tr>
                 <tr>
-                    <td>@Html.DisplayNameFor(model => model.Employee.Designation.Title)</td>
-                    <td>@Html.DisplayFor(model => model.Employee.Designation.Title)</td>
-                </tr>
-                <tr>
                     <td>@Html.DisplayNameFor(model => model.Employee.ContactNo)</td>
                     <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
                 </tr>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.Employee.DrivingLicence)</td>
+                    <td>@Html.DisplayFor(model => model.Employee.DrivingLicence)</td>
+                </tr>
+                
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Employee.NID)</td>
                     <td>@Html.DisplayFor(model => model.Employee.NID)</td>
