--- a/RMS.App/Views/Queue/SetupQueue.cshtml
+++ b/RMS.App/Views/Queue/SetupQueue.cshtml
@@ -19,7 +19,9 @@
                 <div class="card-body-icon">
                     <i class="fa fa-university"></i>
                 </div>
-                <div class="mr-5">@ViewBag.OrganizationCount Total Organization!</div>
+                <div class="mr-5">
+                    <h3>@ViewBag.OrganizationCount</h3> Total Organization!
+                </div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "Organizations")">
                 <span class="float-left">View Details</span>
@@ -36,7 +38,8 @@
                 <div class="card-body-icon">
                     <i class="fa fa-briefcase"></i>
                 </div>
-                <div class="mr-5">@ViewBag.DepartmentCount Totla Department!</div>
+                <div class="mr-5">
+                    <h3>@ViewBag.DepartmentCount</h3> Totla Department!</div>
             </div>
 
             <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "Departments")">
@@ -54,7 +57,8 @@
                 <div class="card-body-icon">
                     <i class="fa fa-graduation-cap"></i>
                 </div>
-                <div class="mr-5">@ViewBag.DesignationCount Total Designation!</div>
+                <div class="mr-5">
+                    <h3>@ViewBag.DesignationCount</h3> Total Designation!</div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "Designations")">
                 <span class="float-left">View Details</span>
@@ -70,7 +74,8 @@
                 <div class="card-body-icon">
                     <i class="fa fa-user"></i>
                 </div>
-                <div class="mr-5">@ViewBag.EmployeeTypeCount Totla Employee Type!</div>
+                <div class="mr-5">
+                    <h3>@ViewBag.EmployeeTypeCount</h3> Totla Employee Type!</div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "EmployeeTypes")">
                 <span class="float-left">View Details</span>
@@ -104,7 +109,9 @@
                 <div class="card-body-icon">
                     <i class="fa fa-car" aria-hidden="true"></i>
                 </div>
-                <div class="mr-5">@ViewBag.VehicleCount Total Vehicle!</div>
+                <div class="mr-5">
+                    <h3 >@ViewBag.VehicleCount</h3> Total Vehicle!
+                </div>
             </div>
 
             <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "Vehicles")">
@@ -121,7 +128,9 @@
                 <div class="card-body-icon">
                     <i class="fa fa-car"></i>
                 </div>
-                <div class="mr-5">@ViewBag.VehicleTypeCount Total Vehicle Type!</div>
+                <div class="mr-5">
+                    <h3 >@ViewBag.VehicleTypeCount</h3> Total Vehicle Type!
+                </div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Index", "VehicleTypes")">
                 <span class="float-left">View Details</span>
@@ -137,7 +146,9 @@
                 <div class="card-body-icon">
                     <i class="fa fa-user"></i>
                 </div>
-                <div class="mr-5">@ViewBag.EmployeeCount Totla Registered Employee!</div>
+                <div class="mr-5">
+                    <h3 >@ViewBag.EmployeeCount</h3> Totla Registered Employee!
+                </div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="@Url.Action("GetAllEmployee", "Employees")">
                 <span class="float-left">View Details</span>
@@ -153,7 +164,9 @@
                 <div class="card-body-icon">
                     <i class="fa fa-user"></i>
                 </div>
-                <div class="mr-5">@ViewBag.DriverCount  Total Registered Driver!</div>
+                <div class="mr-5">
+                    <h3 >@ViewBag.DriverCount</h3> Total Registered Driver!
+                </div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="@Url.Action("GetAllDriver", "Employees")">
                 <span class="float-left">View Details</span>
