--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -147,21 +147,26 @@
                     <h4>Vehicle and Driver Info!</h4>
                     <hr/>
                     <table class="table table-bordered table-light table-striped" style="width: 100%">
-                        <tr>
-                            <td>Vehicle Registration No:</td>
-                            <td>@data.Vehicle.RegNo</td>
-                        </tr>
+
                         <tr>
                             <td>Driver Name:</td>
                             <td>@data.Employee.FullName</td>
+                        </tr>
+                        <tr>
+                            <td>Driver Contact No:</td>
+                            <td>@data.Employee.ContactNo</td>
+                        </tr>
+                        <tr>
+                            <td>Vehicle Type:</td>
+                            <td>@data.Vehicle.VehicleType.Name</td>
                         </tr>
                         <tr>
                             <td>Vehicle Brand Name:</td>
                             <td>@data.Vehicle.BrandName</td>
                         </tr>
                         <tr>
-                            <td>Driver Contact No:</td>
-                            <td>@data.Employee.ContactNo</td>
+                            <td>Vehicle Registration No:</td>
+                            <td>@data.Vehicle.RegNo</td>
                         </tr>
 
                     </table>
