--- a/RMS.App/Views/GatePass/CheckOut.cshtml
+++ b/RMS.App/Views/GatePass/CheckOut.cshtml
@@ -81,7 +81,7 @@
         </div>
 
 
-        <div class="form-group row" hidden="hideen">
+        <div class="form-group row" hidden="hidden">
             @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
                 @Html.EditorFor(model => model.RequisitionId, new { htmlAttributes = new { @class = "form-control" } })
@@ -94,7 +94,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-5">
                 <input type="submit" value="CheckOut" class="btn btn-warning" /> &nbsp;
-                @Html.ActionLink("Back to List", "Requests", null, new { @class = "btn btn-info" })
+                @Html.ActionLink("Back to List", "OnProcess","AssignRequisitions", null, new { @class = "btn btn-info" })
             </div>
         </div>
     </div>
